deploy: 0fafc0fad242998d8ba30613786c195b5bca8701

--- a/README.html
+++ b/README.html
@@ -83,10 +83,10 @@ hr {
 	<body>
 		<div class="main">
 <h1 id="metru-nui-online--readme">Metru Nui OnLine – README</h1>
-<p>Travel to Metru Nui and become an Akilini champion. Develop your skills, collect new disks, and face incredible challenges. But all is not as it seems in the City of Legends. Choose your allies, solve the mysteries. The destiny of the city lies in your hands…</p>
+<p>Travel to Metru Nui and become an Akilini champion. Develop your skills, collect new disks, and face incredible challenges. But all is not as it seems in the City of Legends. Choose your allies, solve the mysteries. The destiny of the city lies in your hands...</p>
 <h2 id="license">License</h2>
 <p>Copyright Tula and -Takua-. Re-release by Spirit Forge.</p>
-<p>THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+<p>THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 		</div>
 	</body>
 </html>
