--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>MeNOL - Metru Nui OnLine</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<title>MeNOL - Metru Nui OnLine</title>
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
@@ -51,8 +51,7 @@
 					<script type="text/html" class="swfcode">
 						<div class="game">
 							<object
-								classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-								codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0"
+								classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000"
 								width="800"
 								height="600"
 								id="player"
@@ -64,7 +63,6 @@
 								<param name="flashvars" value="%FLASHVARS%">
 								<embed
 									type="application/x-shockwave-flash"
-									pluginspage="http://www.macromedia.com/go/getflashplayer"
 									width="800"
 									height="600"
 									name="player"
